--- a/public/wp-content/plugins/aokranj/resources/app.css
+++ b/public/wp-content/plugins/aokranj/resources/app.css
@@ -1,3 +1,6 @@
+/*******************************************************************************
+ * Core overrides
+ ******************************************************************************/
 @font-face {
 	font-family: 'aokranj';
 	src:url('fonts/aokranj.eot?-sazk8b');
@@ -9,6 +12,9 @@
 	font-style: normal;
 }
 
+/*******************************************************************************
+ * Wordpress overrides
+ ******************************************************************************/
 #adminmenuback {
     z-index: 1;
 }
@@ -21,19 +27,56 @@
     padding-bottom: 0;
 }
 
-#aokranj {
-    margin: 20px 20px 40px 0;
+/*******************************************************************************
+ * ExtJS overrides
+ ******************************************************************************/
+
+/* core */
+.x-mask {
+    display: none !important;
 }
 
-#aokranj input {
-    box-shadow: none;
-    margin: 0;
+.x-panel-body-default {
+    background: none;
 }
 
-#aokranj input[readonly] {
+/* tabs */
+.x-tabs-top {
+    border: none;
+}
+
+.x-tab-bar-body-top {
+    overflow: visible;
+}
+
+.x-tab-bar-strip-default {
+    border: none;
+}
+
+.x-tab-bar-strip-top {
+    border: none;
+    background: none;
+}
+
+.x-tab-default-top {
+    padding: 10px 12px 10px 10px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    margin-right: 6px;
+}
+
+.x-tab-default-top-active {
+    border-color: #fff;
     background-color: #fff;
 }
 
+.x-tab-default .x-tab-glyph {
+    opacity: 1;
+    font-size: 20px;
+}
+
+/* form */
 .x-form-right-label {
     position: absolute;
     line-height: 24px;
@@ -54,29 +97,26 @@
     content: '*';
 }
 
-
-
-
-.x-tabs-left {
-    border-color: #fff;
+/*******************************************************************************
+ * AO Kranj styles
+ ******************************************************************************/
+#aokranj {
+    margin: 20px 20px 40px 0;
 }
 
-.x-tab-default .x-tab-glyph {
-    opacity: 1;
-    font-size: 20px;
+#aokranj input {
+    box-shadow: none;
+    margin: 0;
 }
 
-.x-tab-default-left {
-    padding: 10px 16px 10px 10px;
-}
-
-.x-tab-default-left-active {
-    border-color: #fff;
+#aokranj input[readonly] {
     background-color: #fff;
 }
 
-.x-tab-bar-strip-left {
-    border-color: #fff;
-    background-color: #fff;
-    right: -5px;
+#aokranj .ao-tabs {
+    border: none;
+}
+
+#aokranj .ao-tabs h2 {
+    margin: 14px 0 20px 0;
 }
