Fix layout for mobile

--- a/public/wp-content/plugins/aokranj/resources/app.css
+++ b/public/wp-content/plugins/aokranj/resources/app.css
@@ -120,3 +120,7 @@
 #aokranj .ao-tabs h2 {
     margin: 14px 0 20px 0;
 }
+
+#aokranj .ao-koledarcek .x-panel-header-default .x-tool {
+    margin-right: 20px;
+}
