--- a/public/wp-content/plugins/aokranj/sass/aokranj.scss
+++ b/public/wp-content/plugins/aokranj/sass/aokranj.scss
@@ -8,13 +8,12 @@
     padding-top: 30px;
     height: 0;
     overflow: hidden;
-}
 
-.responsive-iframe iframe  
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
