--- a/public/wp-content/themes/aokranj/style.css
+++ b/public/wp-content/themes/aokranj/style.css
@@ -53,7 +53,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 24px; }
 
 .widget_fbw_id {
-  background: #a7a9ac; }
+  text-align: center; }
 
 .widget_categories {
   background: #25aae1;
