Update franz-josef theme

--- a/public/wp-content/themes/franz-josef/style.css
+++ b/public/wp-content/themes/franz-josef/style.css
@@ -4,7 +4,7 @@ Theme URI: http://www.graphene-theme.com/franz-josef/
 Author: Graphene Themes Solutions
 Author URI: http://www.graphene-theme.com/about-us/
 Description: Franz Josef is a modern, responsive theme built on a solid framework that leverages the latest web technologies to deliver a beautiful experience. Perfect for businesses and individuals alike. Custom page builder available to quickly and easily create unique and complex custom layouts.
-Version: 1.7
+Version: 1.7.1
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl.html
 Tags: black, blue, white, light, dark, one-column, two-columns, left-sidebar, right-sidebar, responsive-layout, custom-background, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready
@@ -330,6 +330,9 @@ img,
 .container > .navbar-collapse {
 	padding-right: 15px;
 	padding-left: 15px;
+}
+.navbar-nav {
+	float: right;
 }
 .navbar-inverse .navbar-nav > li > a {
 	padding: 32px 10px 33px;
