--- a/public/wp-content/plugins/aokranj/sass/admin.scss
+++ b/public/wp-content/plugins/aokranj/sass/admin.scss
@@ -1,7 +1,66 @@
 #adminmenu {
+  
     .toplevel_page_aokranj\/app {
         .wp-menu-image.svg {
             background-size: 18px auto;
         }
     }
+}
+
+#vzpon {
+
+  .submit {
+    clear: both;
+    padding-top: 20px;
+  }
+
+  .form-datepicker {
+
+    .datepicker {
+      background: #fff;
+    }
+
+    td {
+      &:after {
+        content: "\f508";
+        font: 400 20px/1 dashicons;
+        color: #aaa;
+        position: relative;
+        top: -2px;
+        margin-left: -28px;
+        vertical-align: middle;
+
+        @media (max-width: 782px) {
+          float: right;
+          margin: -30px 5px 0 0;
+        }
+      }
+    }
+  }
+
+
+
+  @media (min-width: 768px) {
+
+    .form-table {
+
+      &.tip {
+        width: 50%;
+        th {
+          width: 175px;
+        }
+      }
+
+      &.left,
+      &.right {
+        width: 50%;
+        float: left;
+        clear: none;
+        th {
+          width: 175px;
+        }
+      }
+
+    }
+  }
 }
