--- a/public/wp-content/plugins/aokranj/css/admin.css
+++ b/public/wp-content/plugins/aokranj/css/admin.css
@@ -33,8 +33,16 @@
     #vzpon .form-table.left th, #vzpon .form-table.right th {
       width: 175px; } }
 
+#vzponi .wp-list-table tr:hover .column-akcije a {
+  display: block; }
+
 #vzponi .wp-list-table .column-akcije {
   width: 60px; }
+  #vzponi .wp-list-table .column-akcije a {
+    display: none;
+    color: #a00; }
+    #vzponi .wp-list-table .column-akcije a:hover {
+      color: #F00; }
 
 @media (min-width: 783px) {
   #vzponi .wp-list-table .column-destinacija:not(th) span {
