--- a/public/wp-content/themes/aokranj/style.css
+++ b/public/wp-content/themes/aokranj/style.css
@@ -28,6 +28,18 @@ h1, h2, h3, h4, h5, h6 {
   #wpadminbar {
     position: fixed; } }
 
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body {
+    padding-top: 76px; } }
+
+@media screen and (min-width: 768px) and (max-width: 782px) {
+  .admin-bar .navbar {
+    top: 46px; } }
+
+@media screen and (min-width: 768px) and (max-width: 960px) {
+  .admin-bar.navbar-pinned .wide-nav .navbar-header {
+    height: 40px; } }
+
 .posts-list .item-title {
   padding: 30px 15px 0 15px;
   font-weight: 100;
