--- a/public/wp-content/themes/aokranj/style.scss
+++ b/public/wp-content/themes/aokranj/style.scss
@@ -49,6 +49,31 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+body {
+  @media screen and (min-width: 768px) and (max-width: 992px) {
+    padding-top: 76px;
+  }
+}
+
+.admin-bar {
+
+  @media screen and (min-width: 768px) and (max-width: 782px) {
+    .navbar {
+      top: 46px;
+    }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 960px) {
+    &.navbar-pinned {
+      .wide-nav {
+        .navbar-header {
+          height: 40px;
+        }
+      }
+    }
+  }
+}
+
 // post
 
 .posts-list {
