--- a/public/wp-content/themes/aokranj/style.scss
+++ b/public/wp-content/themes/aokranj/style.scss
@@ -94,6 +94,9 @@ body {
     font-weight: 100;
     font-family: 'Open Sans', sans-serif;
     color: $lightgray;
+    @media (max-width: 992px) {
+      padding-bottom: 20px;
+    }
     a {
       color: $lightgray;
       &:hover {
