--- a/public/wp-content/themes/aokranj/style.scss
+++ b/public/wp-content/themes/aokranj/style.scss
@@ -21,62 +21,91 @@ $purple: #e025df;
 $lightgray: #a7a9ac;
 $darkgray: #b4b4b4;
 
-// core styles
+// body
+body {
 
-a {
-  color: $blue;
-}
+  // fix body padding on wide-nav
+  @media screen and (min-width: 768px) and (max-width: 1006px) {
+    padding-top: 76px;
+  }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Open Sans', sans-serif;
-}
+  // fix pinned header height
+  &.navbar-pinned {
+    .wide-nav {
+      .navbar-header {
+        @media screen and (min-width: 768px) and (max-width: 960px) {
+          height: 40px;
+        }
+      }
+    }
+  }
 
-.btn {
-	font-family: 'Open Sans', sans-serif;
-}
+  // body with admin bar
+  &.admin-bar {
 
-.admin-bar {
-  .navbar-fixed-top  {
-    @media (max-width: 768px) {
-      top: 46px;
+    // fix navbar top
+    .navbar {
+      @media screen and (min-width: 768px) and (max-width: 782px) {
+        top: 46px;
+      }
+    }
+
+    // fix navbar fixed top
+    .navbar-fixed-top  {
+      @media (max-width: 768px) {
+        top: 46px;
+      }
     }
   }
 }
 
-@media screen and (max-width: 600px) {
-  #wpadminbar {
+// admin bar
+#wpadminbar {
+  @media screen and (max-width: 600px) {
     position: fixed;
   }
 }
 
-body {
-  @media screen and (min-width: 768px) and (max-width: 992px) {
-    padding-top: 76px;
-  }
+// link
+a {
+  color: $blue;
 }
 
-.admin-bar {
+// headers
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Open Sans', sans-serif;
+}
 
-  @media screen and (min-width: 768px) and (max-width: 782px) {
-    .navbar {
-      top: 46px;
+// buttons
+.btn {
+	font-family: 'Open Sans', sans-serif;
+}
+
+// slider
+.carousel {
+
+  .excerpt {
+    @media (min-width: 680px) and (max-width: 768px) {
+      font-size: 2.4vw;
+      line-height: 4vw;
     }
   }
 
-  @media screen and (min-width: 768px) and (max-width: 960px) {
-    &.navbar-pinned {
-      .wide-nav {
-        .navbar-header {
-          height: 40px;
+  .carousel-control {
+    &.left,
+    &.right {
+      span {
+        @media (min-width: 768px) {
+          margin-top: -15px;
         }
       }
     }
   }
 }
 
-// post
-
+// post list (frontpage, ???)
 .posts-list {
+
   .item-title {
     padding: 30px 15px 0 15px;
     font-weight: 100;
@@ -88,6 +117,7 @@ body {
       font-weight: 300;
     }
   }
+
   .author {
     padding: 3px 15px 30px 15px;
     font-size: 15px;
@@ -104,6 +134,7 @@ body {
       }
     }
   }
+
   .item-meta {
     border-top: none;
     margin-top: 0;
@@ -112,7 +143,6 @@ body {
 }
 
 // gallery
-
 #gallery-1 {
 
   &.gallery-columns-3 {
@@ -124,13 +154,13 @@ body {
 }
 
 // footer
-
 .bottom-bar {
   .copyright {
     margin-top: 0;
   }
 }
 
+// sidebar widget mixin
 @mixin sidebar-widget($color) {
   background: $color;
   color: #fff;
@@ -154,6 +184,8 @@ body {
     }
   }
 }
+
+// widgets
 
 .widget_search {
   .form-group {
