--- a/public/wp-content/themes/aokranj/style.scss
+++ b/public/wp-content/themes/aokranj/style.scss
@@ -69,6 +69,10 @@ body {
 // link
 a {
   color: $blue;
+
+  &:hover {
+    color: darken($blue, 10%);
+  }
 }
 
 // headers
@@ -83,6 +87,7 @@ h1, h2, h3, h4, h5, h6 {
 
 // slider
 .carousel {
+  box-shadow: 0 0 3px #ccc;
 
   .excerpt {
     @media (min-width: 680px) and (max-width: 768px) {
@@ -106,6 +111,57 @@ h1, h2, h3, h4, h5, h6 {
 // post list (frontpage, ???)
 .posts-list {
 
+  &.news {
+    border-top: none;
+    padding: 0 0 80px 0;
+
+    .highlight-title {
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+
+    .item-wrap {
+
+      .item {
+        padding: 5px 15px;
+
+        .news-item {
+
+          .news-title {
+            margin: 10px 0;
+            line-height: 20px;
+            font-weight: 300;
+
+            .date {
+              font-size: 16px;
+            }
+
+            .title {
+              color: $orange;
+              font-size: 18px;
+
+              &:hover {
+                color: darken($orange, 10%);
+              }
+            }
+
+            @media (min-width: 768px) {
+              line-height: 24px;
+
+              .date {
+                font-size: 18px;
+              }
+
+              .title {
+                font-size: 22px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
   .item-title {
     padding: 30px 15px 0 15px;
     font-weight: 100;
@@ -115,6 +171,10 @@ h1, h2, h3, h4, h5, h6 {
       font-size: 24px;
       line-height: 26px;
       font-weight: 300;
+
+      &:hover {
+        color: darken($orange, 10%);
+      }
     }
   }
 
