Fix styles and remove config

--- a/public/wp-content/themes/aokranj/style.css
+++ b/public/wp-content/themes/aokranj/style.css
@@ -44,10 +44,19 @@ h1, h2, h3, h4, h5, h6 {
 
 .carousel {
   box-shadow: 0 0 3px #ccc; }
-  @media (min-width: 680px) and (max-width: 768px) {
-    .carousel .excerpt {
-      font-size: 2.4vw;
-      line-height: 4vw; } }
+  @media (min-width: 500px) and (max-width: 688px) {
+    .carousel .carousel-caption {
+      padding-top: 0; } }
+  .carousel .excerpt {
+    background: rgba(0, 0, 0, 0.5);
+    padding: 5px 10px;
+    margin-bottom: 20px; }
+    .carousel .excerpt p {
+      margin: 0; }
+    @media (min-width: 680px) and (max-width: 768px) {
+      .carousel .excerpt {
+        font-size: 2.4vw;
+        line-height: 4vw; } }
   @media (min-width: 768px) {
     .carousel .carousel-control.left span, .carousel .carousel-control.right span {
       margin-top: -15px; } }
