--- a/public/wp-content/themes/aokranj/style.scss
+++ b/public/wp-content/themes/aokranj/style.scss
@@ -215,6 +215,17 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+// post entry
+.entry-meta {
+  .date {
+    a {
+      font-size: 12px;
+      font-weight: 400;
+      font-family: 'Open Sans', sans-serif;
+    }
+  }
+}
+
 // gallery
 #gallery-1 {
 
