--- a/public/wp-content/themes/aokranj/style.scss
+++ b/public/wp-content/themes/aokranj/style.scss
@@ -21,6 +21,13 @@ $purple: #e025df;
 $lightgray: #a7a9ac;
 $darkgray: #b4b4b4;
 
+.background-orange { background-color: $orange; }
+.background-green { background-color: $green; }
+.background-blue { background-color: $blue; }
+.background-purple { background-color: $purple; }
+.background-lightgray { background-color: $lightgray; }
+.background-darkgray { background-color: $darkgray; }
+
 // body
 body {
 
