--- a/public/wp-content/themes/aokranj/style.scss
+++ b/public/wp-content/themes/aokranj/style.scss
@@ -146,7 +146,7 @@ h1, h2, h3, h4, h5, h6 {
         color: #fff;
 
         .news-item {
-          border-bottom: 1px solid #fff;
+          border-bottom: 1px solid lighten($green, 20%);
 
           &:last-child {
             border-bottom: none;
