--- a/public/wp-content/themes/aokranj/style.css
+++ b/public/wp-content/themes/aokranj/style.css
@@ -87,31 +87,25 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 20px; }
   .posts-list.news .item-wrap .item {
     color: #fff; }
-    .posts-list.news .item-wrap .item .news-item {
+    .posts-list.news .item-wrap .item .title {
+      margin: 0;
       border-bottom: 1px solid #bbdd8e; }
-      .posts-list.news .item-wrap .item .news-item:last-child {
+      .posts-list.news .item-wrap .item .title:last-child {
         border-bottom: none; }
-      .posts-list.news .item-wrap .item .news-item .news-title {
-        margin: 0;
+      .posts-list.news .item-wrap .item .title .link {
+        display: block;
+        padding: 12px;
         line-height: 20px;
-        font-weight: 300; }
-        .posts-list.news .item-wrap .item .news-item .news-title .date {
-          font-size: 16px; }
-        .posts-list.news .item-wrap .item .news-item .news-title .title {
-          display: block;
-          color: #fff;
-          font-size: 18px;
-          padding: 10px;
-          background: #8cc63f; }
-          .posts-list.news .item-wrap .item .news-item .news-title .title:hover {
-            background: #98cc53; }
-        @media (min-width: 768px) {
-          .posts-list.news .item-wrap .item .news-item .news-title {
-            line-height: 24px; }
-            .posts-list.news .item-wrap .item .news-item .news-title .date {
-              font-size: 18px; }
-            .posts-list.news .item-wrap .item .news-item .news-title .title {
-              font-size: 22px; } }
+        font-size: 18px;
+        font-weight: 400;
+        background: #8cc63f;
+        color: #fff; }
+        .posts-list.news .item-wrap .item .title .link:hover {
+          text-decoration: underline; }
+      @media (min-width: 768px) {
+        .posts-list.news .item-wrap .item .title .link {
+          line-height: 24px;
+          font-size: 22px; } }
 
 .posts-list .item-title {
   padding: 30px 15px 0 15px;
