--- a/public/wp-content/plugins/aokranj/sass/admin.scss
+++ b/public/wp-content/plugins/aokranj/sass/admin.scss
@@ -88,11 +88,46 @@
       width: 120px;
     }
 
-    .column-destinacija {
+    .column-primary {
       @media (min-width: 783px) {
         &:not(th) {
           span {
             display: none;
+          }
+        }
+      }
+    }
+  }
+}
+
+#statistika {
+
+  .years {
+    display: flex;
+    flex-wrap: wrap;
+
+    .year {
+      flex: 1;
+      padding: 0 60px 30px 0;
+
+      ul {
+
+        li {
+          width: 260px;
+          max-width: 100%;
+
+          &:last-child {
+            border-top: 1px solid #888;
+            font-weight: bold;
+          }
+
+          .tip {
+            display: inline-block;
+            width: 160px;
+          }
+
+          .count {
+
           }
         }
       }
