--- a/public/wp-content/plugins/aokranj/sass/admin.scss
+++ b/public/wp-content/plugins/aokranj/sass/admin.scss
@@ -103,31 +103,41 @@
 #statistika {
 
   .years {
-    display: flex;
-    flex-wrap: wrap;
 
     .year {
-      flex: 1;
+      display: inline-block;
       padding: 0 60px 30px 0;
+      width: 100%;
+      max-width: 350px;
+
+      @media (min-width: 768px) {
+        width: 260px;
+        max-width: 100%;
+      }
 
       ul {
 
         li {
-          width: 260px;
-          max-width: 100%;
+          display: flex;
+          color: #666;
 
           &:last-child {
             border-top: 1px solid #888;
             font-weight: bold;
+            padding-top: 4px;
+            color: #000;
           }
 
           .tip {
             display: inline-block;
-            width: 160px;
+            flex: 2;
           }
 
           .count {
-
+            display: inline-block;
+            flex: 1;
+            text-align: right;
+            color: #000;
           }
         }
       }
