--- a/public/wp-content/plugins/aokranj/css/admin.css
+++ b/public/wp-content/plugins/aokranj/css/admin.css
@@ -56,12 +56,13 @@
 #statistika .years .year {
   display: inline-block;
   padding: 0 60px 30px 0;
-  width: 100%;
-  max-width: 350px; }
+  width: 100%; }
   @media (min-width: 768px) {
     #statistika .years .year {
-      width: 260px;
+      width: 280px;
       max-width: 100%; } }
+  #statistika .years .year.sum {
+    display: block; }
   #statistika .years .year ul li {
     display: flex; }
     #statistika .years .year ul li:last-child {
