--- a/public/wp-content/plugins/aokranj/sass/admin.scss
+++ b/public/wp-content/plugins/aokranj/sass/admin.scss
@@ -108,11 +108,14 @@
       display: inline-block;
       padding: 0 60px 30px 0;
       width: 100%;
-      max-width: 350px;
 
       @media (min-width: 768px) {
-        width: 260px;
+        width: 280px;
         max-width: 100%;
+      }
+
+      &.sum {
+        display: block;
       }
 
       ul {
